kubepiter-web/examples/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubepiter-client-srv
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: kubepiter-client
