kubepiter-web/examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kubepiter-client-ing

spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                port:
                  number: 3000
                name: kubepiter-client-srv
